--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -33,7 +33,7 @@
                 android:textStyle="bold"/>
 
             <EditText
-                android:id="@+id/textView2"
+                android:id="@+id/user_login"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginTop="70dp"
@@ -49,7 +49,7 @@
                 android:background="@drawable/intro_btn_background"/>
 
             <EditText
-                android:id="@+id/textView3"
+                android:id="@+id/user_email"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginTop="5dp"
@@ -65,7 +65,7 @@
                 android:background="@drawable/intro_btn_background"/>
 
             <EditText
-                android:id="@+id/textView4"
+                android:id="@+id/user_phone"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginTop="5dp"
@@ -81,7 +81,7 @@
                 android:background="@drawable/intro_btn_background"/>
 
             <EditText
-                android:id="@+id/textView5"
+                android:id="@+id/user_password"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginStart="32dp"
@@ -99,7 +99,7 @@
 
 
             <EditText
-                android:id="@+id/textView6"
+                android:id="@+id/repeat_password"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginStart="32dp"
@@ -108,14 +108,14 @@
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/intro_btn_background"
                 android:ems="10"
-                android:hint="repid password"
+                android:hint="repeat password"
                 android:inputType="textPassword"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white" />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button"
+                android:id="@+id/button_registration"
                 style="@style/Widget.AppCompat.Button"
                 android:background="@drawable/intro_btn_background"
                 android:layout_marginTop="64dp"
