--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,12 +28,12 @@
                 android:text="Login In"
                 android:textColor="@color/white"
                 android:layout_marginStart="32dp"
-                android:layout_marginTop="128dp"
+                android:layout_marginTop="80dp"
                 android:textSize="50sp"
                 android:textStyle="bold"/>
 
             <EditText
-                android:id="@+id/textView2"
+                android:id="@+id/userName"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginTop="128dp"
@@ -49,7 +49,7 @@
                 android:background="@drawable/intro_btn_background"/>
 
             <EditText
-                android:id="@+id/textView3"
+                android:id="@+id/pass"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginStart="32dp"
@@ -75,7 +75,7 @@
                 />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button"
+                android:id="@+id/button_loggIn"
                 style="@style/Widget.AppCompat.Button"
                 android:background="@drawable/intro_btn_background"
                 android:layout_marginTop="64dp"
@@ -99,7 +99,7 @@
                 android:textSize="16sp" />
 
             <TextView
-                android:id="@+id/textView6"
+                android:id="@+id/register_now"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Register now"
