--- a/app/src/main/res/drawable-anydpi/ic_add.xml
+++ b/app/src/main/res/drawable-anydpi/ic_add.xml
@@ -6,6 +6,6 @@
     android:tint="#000000"
     android:alpha="0.8">
   <path
-      android:fillColor="@android:color/black"
+      android:fillColor="@android:color/primary_text_dark"
       android:pathData="M19,3L5,3c-1.11,0 -2,0.9 -2,2v14c0,1.1 0.89,2 2,2h14c1.1,0 2,-0.9 2,-2L21,5c0,-1.1 -0.9,-2 -2,-2zM17,13h-4v4h-2v-4L7,13v-2h4L11,7h2v4h4v2z"/>
 </vector>
