--- a/app/src/main/res/layout/layout_center_viewpager.xml
+++ b/app/src/main/res/layout/layout_center_viewpager.xml
@@ -6,9 +6,10 @@
         android:layout_height="match_parent">
 
         <androidx.viewpager.widget.ViewPager
+            android:id="@+id/container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/container">
+            android:layout_height="match_parent">
+
         </androidx.viewpager.widget.ViewPager>
 
     </RelativeLayout>
